--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -12,4 +12,16 @@ jobs:
 
     - name: Setup Docker build 
       uses: docker/setup-buildx-action@v3.0.0 
+    - name: Docker Login
+  # You may pin to the exact commit or the version.
+  # uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
+      uses: docker/login-action@v3.0.0
+      with:
+        
+    # Username used to log against the Docker registry
+        username:  murylosenne
+    # Password or personal access token used to log against the Docker registry
+        password:  
+    
+          
     
