--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -22,6 +22,16 @@ jobs:
         username:  murylosenne
     # Password or personal access token used to log against the Docker registry
         password: ${{ secrets.PASSWORD_DOCKER_HUB }} 
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v5.1.0
+      with:
+        context: .
+        file: ./DockerFile
+        push: true
+        tags: murylosenne/go_ci:${{ github.ref_name }}
+        
+          
     
           
     
